# food_reservation

./: CMakeLists.txt  main.c
data/: student_text.txt
entity/: entity.h
logic/: food.c  logic.h  responsible.c  student.c
repository/: food.c  repository.h  responsible.c  student.c
